# Pacifica-Pilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pacifica_pilot_landing_fixed.html  pyproject.toml  vercel.json
.github/workflows/: publish.yml
.impeccable/: design.json
agent/: positions.json
app/: package-lock.json  vite.config.ts  wrangler.toml
app/src/: routeTree.gen.ts  styles.css
app/src/components/: CodeBlock.tsx  Footer.tsx  MemoryGraph.tsx  Navbar.tsx  Terminal.tsx  ThemeToggle.tsx
app/src/components/effects/: Aurora.tsx  BeamBorder.tsx  DotGrid.tsx  GlowingCard.tsx  SpotlightButton.tsx
app/src/routes/: __root.tsx  docs.tsx  index.tsx  integrations.tsx
frontend/: index.html
frontend/src/: App.jsx  styles.css
frontend/src/components/: ArchitectureSection.jsx  AudienceSection.jsx  ComparisonSection.jsx  FeaturesSection.jsx  Footer.jsx  Header.jsx  Hero.jsx  MemorySection.jsx  ProblemsSection.jsx  QuickStart.jsx  StackSection.jsx  ToolsSection.jsx
frontend/src/components/landing/: CodeBlock.tsx  LandingPage.tsx
frontend/src/pages/: LandingPage.jsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/styles/: components.css  design-tokens.css  global.css
pacificapilot/: __init__.py  cli.py  orchestrator.py  pacificapilot.tcss  sentiment.py  setup.py
pacificapilot/agents/: __init__.py  chat.py  loop.py  tools.py
pacificapilot/core/: __init__.py  analytics.py  backtest.py  market_data.py  pacifica_api.py  portfolio.py  risk.py  slippage.py  trading.py
pacificapilot/memo/: __init__.py  logger.py
pacificapilot/memory/: __init__.py  client.py
pacificapilot/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py
pacificapilot/storage/: __init__.py  config.py  database.py
pacificapilot/telegram/: __init__.py  bot.py
pacificapilot/ui/: __init__.py  repl.py  repl_commands.py  theme.py
pacificapilot/ui/tui/: __init__.py  app.py  chat_panel.py  footer.py  header.py  input_bar.py  modals.py  sidebar.py  state.py  tool_cards.py
